helm-releases/minecraft/minecraft-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minecraft-ingress
  namespace: minecraft
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: horel-ca-issuer
    cert-manager.io/common-name: minecraft.horel.io
    traefik.ingress.kubernetes.io/router.middlewares: minecraft-http-to-https@kubernetescrd
spec:
  rules:
    - host: minecraft.horel.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minecraft-minecraft
                port:
                  number: 25565
  tls:
    - secretName: minecraft-tls
      hosts:
        - minecraft.horel.io
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: http-to-https
  namespace: minecraft
spec:
  redirectScheme:
    scheme: https
    permanent: true
